[gd_scene load_steps=10 format=3 uid="uid://2xq07fw8qqid"]

[ext_resource type="Script" uid="uid://n40sl3c3dccr" path="res://Scenes/TelaSelecaoDificuldade.gd" id="1_3jnm5"]
[ext_resource type="Texture2D" uid="uid://dojk7llblp0yc" path="res://Assets/Screen/Fundo_Escolha_Mapa.png" id="2_lwukt"]
[ext_resource type="Texture2D" uid="uid://cd1e75cut8x34" path="res://Assets/Screen/buttons/FacilBt.png" id="3_47rat"]
[ext_resource type="Texture2D" uid="uid://cxj70va86407i" path="res://Assets/Screen/buttons/back_button.svg" id="3_m7gsn"]
[ext_resource type="Texture2D" uid="uid://ctwb746okjbhk" path="res://Assets/Screen/buttons/MedioBt.png" id="4_3jnm5"]
[ext_resource type="Texture2D" uid="uid://6u7u81ebd078" path="res://Assets/Screen/buttons/DificilBt.png" id="5_2nrah"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ddaon"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mcbxi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2w2nw"]

[node name="TelaSelecaoDificuldade" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 3.0
offset_top = 4.0
offset_right = 3.0
offset_bottom = 4.0
script = ExtResource("1_3jnm5")

[node name="Fundo_Mapas" type="TextureRect" parent="."]
offset_left = -11.0
offset_top = -5.0
offset_right = 1156.0
offset_bottom = 651.0
texture = ExtResource("2_lwukt")
expand_mode = 1

[node name="VoltarButton" type="Button" parent="Fundo_Mapas"]
offset_top = 40.0
offset_right = 144.0
offset_bottom = 88.0
theme_override_styles/hover = SubResource("StyleBoxEmpty_ddaon")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_mcbxi")
theme_override_styles/normal = SubResource("StyleBoxEmpty_2w2nw")
icon = ExtResource("3_m7gsn")
expand_icon = true

[node name="Label" type="Label" parent="Fundo_Mapas"]
offset_left = 352.0
offset_top = 174.0
offset_right = 809.0
offset_bottom = 214.0
theme_override_font_sizes/font_size = 21
text = "Seletor de dificuldade"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FacilButton" type="TextureButton" parent="Fundo_Mapas"]
layout_mode = 0
offset_left = 432.0
offset_top = 256.0
offset_right = 2323.0
offset_bottom = 632.0
scale = Vector2(0.15, 0.15)
texture_normal = ExtResource("3_47rat")

[node name="MedioButton" type="TextureButton" parent="Fundo_Mapas"]
layout_mode = 0
offset_left = 434.0
offset_top = 344.0
offset_right = 2325.0
offset_bottom = 720.0
scale = Vector2(0.15, 0.15)
texture_normal = ExtResource("4_3jnm5")

[node name="DificilButton" type="TextureButton" parent="Fundo_Mapas"]
layout_mode = 0
offset_left = 436.0
offset_top = 432.0
offset_right = 2327.0
offset_bottom = 808.0
scale = Vector2(0.15, 0.15)
texture_normal = ExtResource("5_2nrah")
